test/spec_vectors/memory_fill/fail/module_9.wat
(module (memory 1 1) (func (export "testfn") (memory.fill (i32.const 10) (i32.const 20) (f32.const 30))))